# llama2-summarizer

./: README.md
llama2-summarizer/: pyproject.toml
llama2-summarizer/llama2_summarizer/: main.py  preprocessor.py
llama2-summarizer/llama2_summarizer/data/: 100_train.csv  100_train.jsonl  training.csv
