[tool.poetry]
name = "llama2-summarizer"
version = "0.1.0"
description = ""
authors = ["Kody Buss <kody.buss@zelis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
replicate = "^1.0.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
